@startuml

title __TP SOFTWARE CONSTRUCCION's Class Diagram__\n

  namespace com.company {
    class com.company.Arquitecto {
    }
  }
  

  namespace com.company {
    class com.company.Comercial {
    }
  }
  

  namespace com.company {
    class com.company.Comercio {
    }
  }
  

  namespace com.company {
    class com.company.Domestica {
    }
  }
  

  namespace com.company {
    class com.company.Empleado {
    }
  }
  

  namespace com.company {
    class com.company.Empresa {
    }
  }
  

  namespace com.company {
    class com.company.Hotel {
    }
  }
  

  namespace com.company {
    class com.company.Maestro {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Obra {
    }
  }
  

  namespace com.company {
    class com.company.Obrero {
    }
  }
  

  namespace com.company {
    interface com.company.Trabajo {
    }
  }
  

  com.company.Arquitecto -up-|> com.company.Empleado
  com.company.Comercial -up-|> com.company.Obra
  com.company.Comercio -up-|> com.company.Comercial
  com.company.Domestica -up-|> com.company.Obra
  com.company.Hotel -up-|> com.company.Comercial
  com.company.Maestro .up.|> com.company.Trabajo
  com.company.Maestro -up-|> com.company.Empleado
  com.company.Obra -up-|> com.company.Empresa
  com.company.Obrero .up.|> com.company.Trabajo
  com.company.Obrero -up-|> com.company.Empleado


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
